[package]
name = "bevy-aabb-instancing"
version = "0.7.0"
edition = "2021"
description = "Render millions of AABB instances in Bevy."
keywords = ["bevy", "aabb", "cube", "instancing", "render"]
license = "Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy-aabb-instancing/"

[features]
trace = ["bevy/trace_chrome"]

# [dependencies]
# wgpu-core = { path = "/Users/bit/p/wgpu/wgpu-core" }

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "x11"]

[dev-dependencies]
rand = "0.8"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev = "a1095b9bc" }

# [patch.crates-io]
# wgpu-core = { path = "/Users/bit/p/wgpu/wgpu-core" }

# [replace]
# "wgpu-core:0.13.2" = { path = "/Users/bit/p/wgpu/wgpu-core" }